<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AviaTicketFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/title_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/search_cheap_aviatickets"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_rounded_16"
        android:backgroundTint="@color/grey3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_choice_path"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/grey4"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/ic_search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_from"
                    style="@style/style_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:hint="@string/from_moscow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey5" />


                <EditText
                    android:id="@+id/et_to"
                    style="@style/style_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:hint="@string/to_turkey" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        style="@style/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/music_flying"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:listitem="@layout/item_tour" />

    <ProgressBar
        android:id="@+id/loader_tours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_all_tours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_all_tours"
        style="@style/button_text_1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/grey3"
        android:background="@drawable/background_rounded_8"
        android:text="@string/shwo_all_tours"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/rv_tour"
        app:layout_constraintStart_toStartOf="@+id/rv_tour"
        app:layout_constraintTop_toBottomOf="@+id/rv_tour" />

</androidx.constraintlayout.widget.ConstraintLayout>